Develop state machine demo

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/LevelPrototyping/Level1New.Level1New
 EditorStartupMap=/Game/LevelPrototyping/Level1New.Level1New
-GlobalDefaultGameMode="/Script/PuppyHero.PuppyHeroGameMode"
+GlobalDefaultGameMode=/Script/PuppyHero.PuppyHeroGameMode
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
