Gameover UI widget created

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/LevelPrototyping/Level1New.Level1New
-EditorStartupMap=/Game/LevelPrototyping/Level1New.Level1New
+EditorStartupMap=/Game/ThirdPerson/Maps/SublevelTest/SublevelTest.SublevelTest
 GlobalDefaultGameMode="/Script/PuppyHero.PuppyHeroGameMode"
 
 [/Script/Engine.RendererSettings]
