--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,17 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/LevelPrototyping/Level1New.Level1New
 EditorStartupMap=/Game/ThirdPerson/Maps/SublevelTest/SublevelTest.SublevelTest
-GlobalDefaultGameMode="/Script/PuppyHero.PuppyHeroGameMode"
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/LevelPrototyping/Level1New.Level1New
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Script/PuppyHero.PuppyHeroGameMode
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
