--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,7 +7,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprints/BP_instanceCheck_point.BP_instanceCheck_point_C
 GameDefaultMap=/Game/LevelPrototyping/Level1New.Level1New
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/PuppyHero.PuppyHeroGameMode
