Game build created. Zhao_Final level and player BP updated for better playtest experience.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/SublevelTest/SublevelTest.SublevelTest
+EditorStartupMap=/Game/ThirdPerson/Maps/zhao_Final.zhao_Final
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -8,7 +8,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/BP_instanceCheck_point.BP_instanceCheck_point_C
-GameDefaultMap=/Game/LevelPrototyping/Level1New.Level1New
+GameDefaultMap=/Game/ThirdPerson/Maps/zhao_Final.zhao_Final
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/PuppyHero.PuppyHeroGameMode
 GlobalDefaultServerGameMode=None
