--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,13 +1,14 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=DD2F35234BFD7BAEBC8ACEAA0A74D8E6
-ProjectName=Third Person Game Template
+ProjectName=No Strings Attached
+ProjectVersion=0.1.0.0
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-BuildTarget=PuppetHero_Game
+BuildTarget=NoStringsAttched_Game
 FullRebuild=True
 BuildConfiguration=PPBC_Shipping
 
