Climb updated with input.

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -406,6 +406,9 @@ MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
 MaterialExpressionVectorParameter.MaterialExpression=True
 MaterialExpressionVectorParameter.CustomPrimitiveData=True
 MaterialExpressionVectorParameter.ParameterCustomization=True
+BP_ThirdPersonCharacter_C.Default=True
+K2Node_Timeline.GraphNodeDetail=True
+PushableBox_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Maps/ThirdPersonMap_BuiltData.ThirdPersonMap_BuiltData=1
@@ -1516,10 +1519,10 @@ AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/Yellow
+MRUItem0=/Game/ThirdPerson/Blueprints/PushableBox
 MRUItem1=/Game/ThirdPerson/Blueprints/HangableEdge
-MRUItem2=/Game/ThirdPerson/Blueprints/PushableBox
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem3=/Game/ThirdPerson/Blueprints/Yellow
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
