Add player states

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/BP_instanceCheck_point.BP_instanceCheck_point_C
 GameDefaultMap=/Game/ThirdPerson/Maps/zhao_Final.zhao_Final
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/PuppyHero.PuppyHeroGameMode
+GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/UpgradeToStateMachine/BP_GameMode_StateMachine.BP_GameMode_StateMachine_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
