--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -64,6 +64,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/PuppyHero")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="PuppyHeroGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="PuppyHeroCharacter")
+bUseFixedFrameRate=True
+FixedFrameRate=60.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
