Change plugin compile bug

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 # Compiled Dynamic libraries
 *.so
 *.dylib
-#*.dll
+*.dll
 
 # Fortran module files
 *.mod
@@ -23,7 +23,7 @@
 *.lai
 *.la
 *.a
-#*.lib
+*.lib
 
 # Executables
 *.exe
@@ -47,7 +47,7 @@ SourceArt/**/*.tga
 
 # Binary Files
 Binaries/*
-Plugins/*/Binaries/*
+
 
 # Builds
 Build/*
@@ -68,7 +68,16 @@ Saved/*
 
 # Compiled source files for the engine to use
 Intermediate/*
+
+# Plugin 
+
+# !Plugins/
+
+# Plugins/*
+# !Plugins/StateMachinePlugin/
+
 Plugins/*/Intermediate/*
+Plugins/*/Binaries/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
