--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/zhao_Final.zhao_Final
+EditorStartupMap=/Game/ThirdPerson/Maps/act_1/act_one.act_one
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -8,7 +8,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/BP_instanceCheck_point.BP_instanceCheck_point_C
-GameDefaultMap=/Game/ThirdPerson/Maps/zhao_Final.zhao_Final
+GameDefaultMap=/Game/ThirdPerson/Maps/act_1/act_one.act_one
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/UpgradeToStateMachine/BP_GameMode_StateMachine.BP_GameMode_StateMachine_C
 GlobalDefaultServerGameMode=None
