--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,7 +8,7 @@ bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-BuildTarget=NoStringsAttched_Game
+BuildTarget=
 FullRebuild=True
 BuildConfiguration=PPBC_Shipping
 
