--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -23,6 +23,7 @@ r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 r.CustomDepth=3
+r.AntiAliasingMethod=1
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
