--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -142,3 +142,5 @@ bAkAudioMixerEnabled=False
 MigratedEnableMultiCoreRendering=True
 FixupRedirectorsDuringMigration=False
 
+WwiseWindowsInstallationPath=(Path="C:/Program Files (x86)/Audiokinetic/Wwise 2023.1.0.8367")
+WwiseMacInstallationPath=(FilePath="")
