--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/BP_instanceCheck_point.BP_instanceCheck_point_C
 GameDefaultMap=/Game/ThirdPerson/Maps/act_1/act_one.act_one
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/UpgradeToStateMachine/BP_GameMode_StateMachine.BP_GameMode_StateMachine_C
+GlobalDefaultGameMode=None
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
