--- a/PuppyHero.uproject
+++ b/PuppyHero.uproject
@@ -24,6 +24,10 @@
 		{
 			"Name": "HoudiniEngine",
 			"Enabled": false
+		},
+		{
+			"Name": "CommonUI",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
