--- a/Config/DefaultEditor.ini
+++ b/Config/DefaultEditor.ini
@@ -9,3 +9,7 @@ bBlueprintIsNotBlueprintType= true
 
 [/Script/AdvancedPreviewScene.SharedProfiles]
 
+[/Script/CommonUI.CommonUIEditorSettings]
+TemplateButtonStyle=None
+TemplateBorderStyle=None
+
