--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/StartLevel/StartLevel.StartLevel
+EditorStartupMap=/Game/ThirdPerson/Maps/act_1/act_one.act_one
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
